--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,7 @@
 // Typography
 //––––––––––––––––––––––––––––––––––––––––––––––––––
 
+$base-font-size:                15px;
 $base-font-family:              'Open Sans', sans-serif; 
 $code-font-family:              'Inconsolata', monospace;
 $header-font-family:            'Lato', sans-serif; 
@@ -8,12 +9,12 @@ $header-font-family:            'Lato', sans-serif;
 $heading-font-weight:           700;
 
 // The font sizes for h1-h6.
-$h1-font-size:                  2   * $base-font-size !default;
-$h2-font-size:                  1.5 * $base-font-size !default;
-$h3-font-size:                  1.4 * $base-font-size !default;
-$h4-font-size:                  1.3 * $base-font-size !default;
-$h5-font-size:                  1.2 * $base-font-size !default;
-$h6-font-size:                  1.1 * $base-font-size !default;
+$h1-font-size:                  2   * $base-font-size;
+$h2-font-size:                  1.5 * $base-font-size;
+$h3-font-size:                  1.4 * $base-font-size;
+$h4-font-size:                  1.3 * $base-font-size;
+$h5-font-size:                  1.2 * $base-font-size;
+$h6-font-size:                  1.1 * $base-font-size;
 
 // Styling
 //––––––––––––––––––––––––––––––––––––––––––––––––––
@@ -59,5 +60,6 @@ $blockquote-border-left-width:  0;
 
 // layers
 $z-layers: (
+    'header': 101,
     'site-nav': 100
 );
